--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": {
     "url": "git+https://github.com/chakri68/finance-tracker.git"
   },
-  "homepage": "http://chakri68.github.io/chakri68",
+  "homepage": "http://chakri68.github.io/finance-tracker",
   "license": "MIT",
   "private": true,
   "scripts": {
